--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "devDependencies": {
     "@types/node": "^20.12.4",
     "prisma": "^5.12.1",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.12.1",
